<resources>
    <string name="app_name">NoteApp</string>
    <string name="ingresar_usuario">Ingresar Nombre de Usuario</string>
    <string name="ingresar_nombres">Ingresar Nombres Completos</string>
    <string name="ingresar_correo_electronico">Ingresar Correo Electronico</string>
    <string name="ingresar_password">Ingresar Contraseña</string>
    <string name="guardar_registro">Guardar Registro</string>
</resources>
